CSS: rework jira issue widget layout for better readability

--- a/stylesheets/_community/_features.less
+++ b/stylesheets/_community/_features.less
@@ -2065,19 +2065,26 @@ ul.supportedin {
   padding: 0px;
   border-bottom:1px solid #F1F1F1;
   .issue{
-    padding:7px 4px;
-    line-height:14px;
+    padding:15px 10px;
+  }
+  .jira-icon {
+    margin-left: -2px;
   }
   ul{
     padding:0px;
-    margin:0px 0 0 22px;
+    margin:0 0 0 22px;
     font-weight:normal;
   }
   li {
     margin:0px;
-    display:inline;
+    /*display:inline;*/
+    line-height: 11px;
     padding-right:10px;
-    color:#999;
+    color:#888;
+    .jira-icon {
+      margin-top: -4px;
+      margin-left: -3px;
+    }
   }
   a {
     font-weight:bold;
